--- a/ProjaraWeb/WebContent/views/prodavac.html
+++ b/ProjaraWeb/WebContent/views/prodavac.html
@@ -34,7 +34,8 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="racun in racuni | filter : prikaziOdgovarajuce">
+						<tr ng-repeat="racun in racuni | filter : prikaziOdgovarajuce"> 
+						<!--<tr ng-repeat="racun in racuni"> -->
 							<td>{{racun.oznaka}}</td>
 							<td>{{racun.oznakaKupca}}</td>
 							<td>{{racun.stanje}}</td>
