Prikaz informacija o menadzeru

--- a/ProjaraWeb/WebContent/views/menadzer_kategorije_kupaca.html
+++ b/ProjaraWeb/WebContent/views/menadzer_kategorije_kupaca.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <div data-ng-controller="menadzer_kategorijeKupacaController">
 	
-	<div style='margin-left: 20%;margin-right: 20%;margin-bottom: 10%'>
+	<div style='margin-left: 10%;margin-right: 10%;margin-bottom: 10%'>
 		<div class='table-responsive'>
 			<table class='table table-bordered'>
 				<thead>
@@ -32,7 +32,7 @@
 								<tr data-ng-repeat="p in cat.thresholds track by $index">
 								<td> {{p.from}} </td>
 								<td> {{p.to}} </td>
-								<td> {{p.percentage}} </td>
+								<td> {{p.percentage}}% </td>
 								</tr>
 							</span>
 							</table>
