--- a/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
@@ -16,7 +16,8 @@
 			 <input type='date' min="{{parentScope.filterDate(minDate)}}" class='form-control' data-ng-model='newAction.info.until' required/>
 			 <br/>
 			 <input type='number' min=0 class='form-control' data-ng-model='newAction.info.dicount'  placeholder='Popust' required/>
-			 <br/>
+			 <br/> <br/>
+			 <b> Kategorije: </b> <br/>
 			 <table class='table'>
 			 	<tr>
 			 		<td> <input type='text' data-ng-disabled='true' data-ng-model='selectedCategory' class='form-control' placeholder='Oznaka'/> </td>
