Filtriranje racuna po statusu - rest poziv

--- a/ProjaraWeb/WebContent/views/prodavac.html
+++ b/ProjaraWeb/WebContent/views/prodavac.html
@@ -34,8 +34,8 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="racun in racuni | filter : prikaziOdgovarajuce"> 
-						<!--<tr ng-repeat="racun in racuni"> -->
+						<!--<tr ng-repeat="racun in racuni | filter : prikaziOdgovarajuce"> -->
+						<tr ng-repeat="racun in racuni"> 
 							<td>{{racun.oznaka}}</td>
 							<td>{{racun.oznakaKupca}}</td>
 							<td>{{racun.stanje}}</td>
