--- a/ProjaraWeb/WebContent/views/kupac_info.html
+++ b/ProjaraWeb/WebContent/views/kupac_info.html
@@ -1,6 +1,16 @@
 <div ng-controller="kupac_infoController">
 	<div class="col-md-2"></div>
 	<div ng-cloak="" class="tabsdemoDynamicHeight col-md-8" ng-app="sbzApp">
+	<!-- Success message -->
+			<div class="row">
+				<div class="col-md-offset-4 col-md-4">
+					<div class="alert alert-success" role="alert" ng-show="uspesno">
+		            	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+		            	{{uspesno}}
+		        	</div>
+				</div>
+				<div class="col-md-4"> &nbsp; </div>
+			</div>
 	  <md-content>
 	    <md-tabs md-dynamic-height="" md-border-bottom="">
 	      <md-tab label="Profil">
