--- a/ProjaraWeb/WebContent/views/prodavac_navBar.html
+++ b/ProjaraWeb/WebContent/views/prodavac_navBar.html
@@ -9,6 +9,7 @@
         <ul class="nav navbar-nav">
         		<li><a href ng-click="racuni()">Računi</a></li>
                 <li><a href ng-click="narudzbe()">Narudžbe</a></li>
+                <li><a href ng-click="artikli()">Artikli</a></li>
         </ul>
             <p class="navbar-text navbar-right"><a href ng-click="odjava()">Odjava</a></p>
             <ul class="nav navbar-nav navbar-right">
