--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -62,6 +62,9 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
+    			<select class="form-control" ng-model="artikl.category.name"
+					ng-options="kat.info.name for kat in sveKategorije">
+				</select>
     			<input type="text" class="form-control" ng-model="artikl.category.name">
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
@@ -105,6 +108,20 @@
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
     			<input type="text" class="form-control" ng-model="artikl.info.minQuantity">
+    		</div>
+    		<div class="col-md-1"> &nbsp; </div>
+    	</div>
+    	
+    	<div class="row">
+    		<div class="col-md-1"> &nbsp; </div>
+    		<div class="col-md-10"> 
+    			<label> Artikl aktivan ili ne: </label></div>
+    		<div class="col-md-1"> &nbsp; </div>
+    	</div>
+    	<div class="row">
+    		<div class="col-md-1"> &nbsp; </div>
+    		<div class="col-md-10"> 
+    			<input type="checkbox" ng-checked="artikl.info.active">Aktivan
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
