refresh nakon unosa (u pokusaju)

--- a/ProjaraWeb/WebContent/views/prodavac_artikli.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artikli.html
@@ -45,7 +45,7 @@
       					<td> {{artikl.info.cost}} </td>
       					<td> {{artikl.info.inStock}} </td>
       					<td> {{artikl.info.minQuantity}} </td>
-      					<td> <md-checkbox ng-checked ="artikl.info.active" ng-readonly="true" aria-readonly="true"> 
+      					<td> <md-checkbox ng-checked ="artikl.info.active" ng-readonly="true"> 
       						</md-checkbox>
       					</td>
       					<td>
