--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -132,7 +132,7 @@
 
     
      <div class="modal-footer">
-     	<button class="btn" ng-click="zatvori()">Potvrdi unos</button>
+     	<button class="btn" ng-click="potvrdi()">Potvrdi unos</button>
         <button class="btn" ng-click="zatvori()">Zatvori</button>
     </div>
 </div>
