--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -48,7 +48,8 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="file" accept="image/*" ng-model="artikl.info.picture">
+    			<input type='file' accept='image/*' onchange="angular.element(this).scope().openFile(event)" ng-model="image"><br>
+				<img id='output' height='60px' width='80px'>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
