--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -49,7 +49,7 @@
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
     			<input type='file' accept='image/*' onchange="angular.element(this).scope().openFile(event)" ng-model="image"><br>
-				<img id='output' height='60px' width='80px'>
+				<img id='output' height='60px' width='80px' ng-src='./images/{{artikl.info.picture}}'>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
