--- a/ProjaraWeb/WebContent/views/kupac_korpa.html
+++ b/ProjaraWeb/WebContent/views/kupac_korpa.html
@@ -51,7 +51,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<h4>Želim da iskoristim <input type="number" min=0 style="width:50px" ng-model="bodovi" ng-change="izmenaBodova()"> {{tekst}}</h4>
+	<h4>Želim da iskoristim <input type="number" min=0 max="{{maxBodovi}}" style="width:50px" ng-model="bodovi" ng-change="izmenaBodova()"> {{tekst}}</h4>
 	<button class="btn btn-primary" style="float:right;" ng-click="potvrdaKorpe()">Potvrdi</button>
 </div>
 <div class="col-md-2"></div>
