--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -11,13 +11,13 @@
     
     <div class="modal-body">
         <br/>
-    	<div class="row">
+    	<div class="row" ng-show="izmena">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
     			<label> Oznaka artikla: </label></div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
-    	<div class="row">
+    	<div class="row" ng-show="izmena">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
     			<input type="text" class="form-control" ng-model="artikl.info.id" ng-disabled="izmena" required>
@@ -96,7 +96,7 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="number" class="form-control" ng-model="artikl.info.inStock" required>
+    			<input type="text" class="form-control" ng-model="artikl.info.inStock" required>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
