--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -96,7 +96,7 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="text" class="form-control" ng-model="artikl.info.inStock" required>
+    			<input type="text" class="form-control" ng-disabled="izmena" ng-model="artikl.info.inStock" required>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
