--- a/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
+++ b/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
@@ -3,10 +3,10 @@
         <h4>Artikal - {{artikal.oznaka}}</h4>
     </div>
     <div class="modal-body">
-    	<div class="col-md-6">
+    	<div>
     		<img ng-src="{{artikal.slika || 'images/defaultImage.png'}}" style="max-width:250px;max-height:500px;overflow: hidden;" ng-click="viseInformacija(artikal.oznaka)">
     	</div>
-    	<div class="col-md-6">
+    	<div>
     		<table class="table table-striped">
     			<tr>
     				<td>Naziv:</td>
@@ -21,12 +21,23 @@
     				<td>{{artikal.cena}}</td>
     			</tr>
     			<tr>
-    				<td>Akcijski događaj:</td>
-    				<td></td>
-    			</tr>
-    			<tr>
-    				<td>Trajanje akcije:</td>
-    				<td></td>
+    				<td>Akcije:</td>
+    				<td>
+    					<table class="table table-striped" ng-show="artikal.akcije.length>0">
+    						<tr>
+    							<td>Naziv</td>
+    							<td>Popust</td>
+    							<td>Trajanje (od)</td>
+    							<td>Trajanje (do)</td>
+    						</tr>
+    						<tr ng-repeat="akcija in artikal.akcije">
+    							<td>{{akcija.name}}</td>
+    							<td>{{akcija.dicount}}%</td>
+    							<td>{{akcija.from}}</td>
+    							<td>{{akcija.until}}</td>
+    						</tr>
+    					</table>
+    				</td>
     			</tr>
     			<tr>
     				<td>Popust:</td>
