--- a/ProjaraWeb/WebContent/views/prodavac_narudzbe.html
+++ b/ProjaraWeb/WebContent/views/prodavac_narudzbe.html
@@ -28,7 +28,7 @@
 							<td>{{nn.naziv}}</td>
 							<td>{{nn.razlog}}</td>
 							<td>
-								 <input type="number" min="1" value="20"></input>
+								 <input type="number" min="1" ng-model="nn.kolicinaZaNaruciti"></input>
 							<td>
 								<input type="checkbox" ng-checked="checkBoxArtikl($index)" 
 									   ng-click="stateChanged($index)"></input>
@@ -50,9 +50,8 @@
             	{{greska}}
         	</div>
         	
-        	<div class="alert alert-success" role="alert" ng-show="uspjesno">
-            	<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            	{{greska}}
+        	<div class="alert alert-success" role="alert" ng-show="uspesno">
+            	{{uspesno}}
         	</div>
 		</div>
 		<div class="col-md-1"> &nbsp; </div>
