kupac - format datuma

--- a/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
+++ b/ProjaraWeb/WebContent/views/kupac_artikalInfo_m.html
@@ -18,7 +18,7 @@
     			</tr>
     			<tr>
     				<td>Cena:</td>
-    				<td>{{artikal.cena}}</td>
+    				<td>{{artikal.cena}} RSD</td>
     			</tr>
     			<tr>
     				<td>Akcije:</td>
@@ -41,11 +41,11 @@
     			</tr>
     			<tr>
     				<td>Popust:</td>
-    				<td>{{artikal.popust}}</td>
+    				<td>{{artikal.popust}}%</td>
     			</tr>
     			<tr>
     				<td>Cena sa popustom:</td>
-    				<td>{{artikal.cenaSaPopustom}}</td>
+    				<td>{{artikal.cenaSaPopustom}} RSD</td>
     			</tr>
     		</table>
     	</div>	
