--- a/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newActionEvent.html
@@ -15,6 +15,7 @@
 			 <b> Traje do: </b> <br/> 
 			 <input type='date' min="{{parentScope.filterDate(minDate)}}" class='form-control' data-ng-model='newAction.info.until' required/>
 			 <br/>
+			 <b> Popust: </b>
 			 <input type='number' min=0 class='form-control' data-ng-model='newAction.info.dicount'  placeholder='Popust' required/>
 			 <br/> <br/>
 			 <b> Kategorije: </b> <br/>
