--- a/ProjaraWeb/WebContent/views/menadzer_newCatCustomer.html
+++ b/ProjaraWeb/WebContent/views/menadzer_newCatCustomer.html
@@ -11,6 +11,7 @@
 			   	<br/>
 			    <input type='text' data-ng-model='customerCategory.name' class="form-control" placeholder='Naziv' required/>
 			    <br/>
+			    <b> Pragovi potrošnje: </b> <br/>
 			    <table class='table'>
 			    	<tr>
 			    		<td> <input type='number' step="0.001" data-ng-model='newThreshold.from' placeholder='Od' class='form-control'/> </td>
