--- a/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
+++ b/ProjaraWeb/WebContent/views/prodavac_artiklUnosIzmena_m.html
@@ -82,7 +82,7 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="text" class="form-control" ng-model="artikl.info.cost" required>
+    			<input type="number" class="form-control" ng-model="artikl.info.cost" required>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
@@ -96,7 +96,7 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="text" class="form-control" ng-disabled="izmena" ng-model="artikl.info.inStock" required>
+    			<input type="number" class="form-control" ng-disabled="izmena" ng-model="artikl.info.inStock" required>
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
@@ -110,7 +110,7 @@
     	<div class="row">
     		<div class="col-md-1"> &nbsp; </div>
     		<div class="col-md-10"> 
-    			<input type="text" class="form-control" ng-model="artikl.info.minQuantity">
+    			<input type="number" class="form-control" ng-model="artikl.info.minQuantity">
     		</div>
     		<div class="col-md-1"> &nbsp; </div>
     	</div>
